--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "nuxt": "^3.15.4",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.7",
-    "vue": "latest",
-    "vue-router": "latest"
+    "vue": "latest"
   }
 }
