--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.10.3",
+    "@nuxtjs/icon": "^3.0.0-beta.16",
     "@tailwindcss/vite": "^4.0.7",
     "nuxt": "^3.15.4",
     "tailwind-variants": "^0.3.1",
