--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxtjs/icon": "^3.0.0-beta.16",
     "@tailwindcss/vite": "^4.0.7",
+    "@vueuse/core": "^12.7.0",
     "nuxt": "^3.15.4",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.7",
