--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.15.4",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.7",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.17"
   }
 }
