--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/test-utils": "^3.18.0",
     "eslint": "^9.26.0",
+    "node-fetch": "^3.3.2",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
     "vue-leaflet": "^0.1.0",
